2005-03-29  John Levon  <levon@movementarian.org>

	* libpp/callgraph_container.h:
	* libpp/callgraph_container.cpp:
	* libpp/format_output.h:
	* libpp/format_output.cpp:
	* libpp/profile_container.h:
	* libpp/symbol.h:
	* libpp/symbol_sort.h:
	* libpp/symbol_sort.cpp:
	* libpp/symbol_container.h:
	* libpp/symbol_container.cpp:
	* pp/opreport_options.h: header file cleanup

2005-03-26  John Levon  <levon@movementarian.org>

	* Makefile.am:
	* doc/oprofile.xml:
	* m4/configmodule.m4:
	* module/x86/Makefile.in:
	* module/x86/hammer_entry.S:
	* module/x86/hammer_ia32entry.S:
	* module/x86/hammer_op_syscalls.c:
	* module/x86/hammer_oprofile_nmi.S:
	* module/x86/op_apic.h:
	* module/x86/op_arch.h:
	* module/x86/op_nmi.c: remove x86-64 support for 2.4
	  kernels, as it's non-functional

2005-03-26  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c: honour oprofiled -v first, complain
	if --events option is missing instead of core dumping

	* doc/oprofiled.xml: explain opreport -d behaviour for
	  no-symbol binaries

2005-03-14  Maynard Johnson  <maynardj@us.ibm.com>

	* utils/op_help.c:
	* doc/oprofile.xml: 
	  Update PPC64-related documentation to include URL links to
	  IBM publications.

2005-03-22  John Levon  <levon@movementarian.org>

	* configure.in: bump to 0.9cvs

2005-03-19  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: bump to 0.8.2

2005-03-18  Philippe Elie  <phil.el@wanadoo.fr>

	* events/i386/p4/events:
	* events/i386/p4/unit_masks:
	* events/i386/p4-ht/events:
	* events/i386/p4-ht/unit_masks: remove FRONT_END_EVENT, EXECUTION_EVENT
	  and REPLAY_EVENT.

	* libop/tests/alloc_counter_tests.c: update test according events
	  removal

2005-03-18  Philippe Elie  <phil.el@wanadoo.fr>

	* utils/opcontrol: revert last patch, bash can't do integer
	  arithmetic on hexadecimal.

2005-02-21  John Levon  <levon@movementarian.org>

	* utils/opcontrol: further validation of the kernel range to
	  prevent an unrelocated vmlinux being used
